# qick-dawg

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  FPGA_SETUP.bat  FPGA_SETUP_Wifi.bat  LICENSE.md  ReadMe.md  STATUS.txt  d_1.hwh  paper.bib  paper.md  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: copy_readme_updates_to_rtd_source.yaml  draft-pdf.yml  main.yml  python-app.yaml  semantic_release.yaml  version_changelog_release.yaml
docs/: requirements.txt
docs/doctrees/: environment.pickle  index.doctree  introduction.doctree
docs/doctrees/programs/: cpmgxy8.doctree  hahn_echo.doctree  odmr.doctree  rabi_oscillations.doctree  ramsay_interferometry.doctree  readout_window.doctree  t1_relaxation.doctree
docs/doctrees/thebasics/: introduction.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/programs/: cpmgxy8.html  hahn_echo.html  odmr.html  rabi_oscillations.html  ramsay_interferometry.html  readout_window.html  t1_relaxation.html
docs/html/thebasics/: introduction.html
docs/source/: conf.py  index.rst
docs/source/hardware/: Enclosure_Front.STEP  Enclosure_Main.STEP  Low_Freq_Diff_Amp_Base.STEP  Low_Freq_Diff_Amp_Top.STEP  Readme.md  Router_Holder.STEP  parts_all.xlsx  parts_digikey.xlsx
firmware/RFSoC4x2_commonclk_dc/: timing_4x2.xdc
firmware/RFSoc_4x2/: RFSoc_4x2.txt
firmware/common_clock/: README.txt  bd_4x2_2020-2.tcl  qick_4x2.hwh  timing_4x2.xdc
firmware/photon_counting/: ._qick_4x2.bit  qick_4x2.hwh
firmware/photon_counting_111/: qick_111.hwh
firmware/photon_counting_9ghz/: qick_4x2.hwh
firmware/zcu111/: zcu111.txt
firmware/zcu216/: d_1_wrapper.ltx
hardware/pmod_buffer/: pmod_buffer.csv  pmod_buffer.kicad_pcb  pmod_buffer.kicad_prl  pmod_buffer.kicad_pro  pmod_buffer.kicad_sch  pmod_channel_driver.kicad_sch
installation/: Install_Packages.ipynb  Install_Packages_LAN.ipynb  Readme.md  Readme_LAN.md  Readme_Wifi.md
installation/4x2enclosure/: Enclosure_Main.SLDPRT  Low_Freq_Diff_Amp_Base.SLDPRT  Router_Holder.SLDPRT
installation/run_server/: name-server.ipynb  qick_daemon.ipynb
jupyter_notebooks/: NVDemo_RFSoC4.ipynb  NVDemo_RFSoC4x2.ipynb  NVanalogDemo_RFSoC4x2.ipynb  NVcountingDemo_RFSoC4x2.ipynb
jupyter_notebooks/.ipynb_checkpoints/: NVDemo_RFSoC4x2-checkpoint.ipynb
paper/: README.md  paper.md
qickdawg/: __init__.py
qickdawg/fit_functions/: exponentialdecay.py
qickdawg/fitfunctions/: __init__.py  exponentialdecay.py
qickdawg/nvpulsing/: CPMG  CPMG.py  CPMGXY8-n.py  CPMGXYN.py  DEER.py  getreadoutwindow.py  hahnechodelaysweep.py  laseroff.py  laseron.py  lockinodmr.py  nvaverageprogram.py  nvconfiguration.py  nvqicksweep.py  plintensity.py  rabisweep.py  ramsey.py  readoutwindow.py  t1delaysweep.py
qickdawg/util/: __init__.py  absolute.py  compresseddifference.py  cpmgxy8arb.py  intexpscale.py  itemattribute.py  liveplot.py  startclient.py
run_server/: Remote_operation_with_Pyro4.ipynb  name_server.ipynb  qick_daemon.ipynb
src/qickdawg/: __init__.py
test/: Untitled.ipynb
test/local/: test_nv_config.py
test/notebooks/: 00 - test_laser_on_off.ipynb  01 - test_lockin_odmr.ipynb  02 - test_rabi_sweep.ipynb  03 - test_hahn_echo_sweep.ipynb  04 - test_ramsey_sweep.ipynb  05 - test_t1_delay_sweep.ipynb  06 - test_cpmgxy8_n_sweep.ipynb
(+95 files in other folders)
