[build-system]
requires = ["setuptools>=43.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "qickdawg"
dynamic=["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "pyro4",
    "serpent",
    "tqdm",
    "scipy",
    "qick==0.2.289"
    ]
requires-python = ">=3.7"
description = """
Software for full quantum control of nitrogen-vacancy defects and other quantum defects in diamond
through microwave and laser pulsing control.
"""
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["quantum control", "nitrogen vacancy", "fpga", "xilinx", "rfsoc", "qubit"]
authors = [
    {name = "Andy Mounce", email = "amounce@sandia.gov"},
    {name = "Emmeline Riendeau", email = "eriendeau@uchicago.edu"}]

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/sandialabs/qick-dawg.git"
"Bug Tracker" = "https://github.com/sandialabs/qick-dawg/issues"

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.dynamic]
version = {attr = "qickdawg.__verison__"}
