[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "qickdawg"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "pyro4",
    "serpent",
    "tqdm",
    "scipy",
    "qick==0.2.302",
    "itemattribute"
    ]
requires-python = ">=3.7"
description = """
Software for full quantum control of nitrogen-vacancy defects and other quantum defects in diamond
through microwave and laser pulsing control.
"""
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["quantum control", "nitrogen vacancy", "fpga", "xilinx", "rfsoc", "qubit"]
authors = [
    {name = "Andy Mounce", email = "amounce@sandia.gov"},
    {name = "Emmeline Riendeau", email = "eriendeau@uchicago.edu"}]

[tool.setuptools_scm]

[project.urls]
Documentation = "https://readthedocs.org"
Repository = "https://github.com/sandialabs/qick-dawg.git"
"Bug Tracker" = "https://github.com/sandialabs/qick-dawg/issues"

[tools.setuptools]
packages = ["qickdawg"]
